tinyml/tests/snapshots/corpus_tests__c0007_annotations__parse.snap
---
source: target/debug/build/tinyml-3635f5e80bf3d5dc/out/corpus_tests_generated.rs
expression: "parse_snapshot(\"tests/fixtures/0007_annotations.ml\")"
---
Module {
    items: [
        LetDecl(
            Const {
                name: Name {
                    name: "annotated",
                    span: Span {
                        start: 4,
                        end: 13,
                    },
                },
                body: TypeHint {
                    expr: Literal {
                        value: Int(
                            "1",
                        ),
                        span: Span {
                            start: 17,
                            end: 18,
                        },
                    },
                    hint: App {
                        name: Name {
                            name: "u8",
                            span: Span {
                                start: 20,
                                end: 22,
                            },
                        },
                        args: [],
                        span: Span {
                            start: 20,
                            end: 22,
                        },
                    },
                    span: Span {
                        start: 16,
                        end: 23,
                    },
                },
                span: Span {
                    start: 0,
                    end: 23,
                },
            },
        ),
        LetDecl(
            Const {
                name: Name {
                    name: "block",
                    span: Span {
                        start: 29,
                        end: 34,
                    },
                },
                body: Block {
                    exprs: [
                        Let {
                            bind: Var {
                                name: Name {
                                    name: "x",
                                    span: Span {
                                        start: 45,
                                        end: 46,
                                    },
                                },
                                span: Span {
                                    start: 45,
                                    end: 46,
                                },
                            },
                            hint: Some(
                                App {
                                    name: Name {
                                        name: "u8",
                                        span: Span {
                                            start: 48,
                                            end: 50,
                                        },
                                    },
                                    args: [],
                                    span: Span {
                                        start: 48,
                                        end: 50,
                                    },
                                },
                            ),
                            body: Literal {
                                value: Int(
                                    "1",
                                ),
                                span: Span {
                                    start: 53,
                                    end: 54,
                                },
                            },
                            span: Span {
                                start: 41,
                                end: 54,
                            },
                        },
                        TypeHint {
                            expr: Var {
                                name: Name {
                                    name: "x",
                                    span: Span {
                                        start: 59,
                                        end: 60,
                                    },
                                },
                                span: Span {
                                    start: 59,
                                    end: 60,
                                },
                            },
                            hint: App {
                                name: Name {
                                    name: "u8",
                                    span: Span {
                                        start: 62,
                                        end: 64,
                                    },
                                },
                                args: [],
                                span: Span {
                                    start: 62,
                                    end: 64,
                                },
                            },
                            span: Span {
                                start: 58,
                                end: 65,
                            },
                        },
                    ],
                    span: Span {
                        start: 37,
                        end: 67,
                    },
                },
                span: Span {
                    start: 25,
                    end: 67,
                },
            },
        ),
    ],
}
